# carpi

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  test-and-coverage.yml  test.yml
backend/: .coveragerc  .gitignore  pyproject.toml
backend/app/: crud.py  db.py  main.py  new.py
backend/app/models/: __init__.py  account.py  action_type.py  new_transaction.py  relations.py  transaction.py  user.py
backend/app/tests/: consts.py  test_app.py
carpi/: crud.py  main.py
carpi/models/: account.py  relations.py  user.py
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: App.svelte  client.js  main.js
tests/: consts.py  test_app.py
